# FinancialEngineeringResources

BackTestingFrameWork/python/load_data/: main.ipynb  main.py
BackTestingFrameWork/python/load_data/csv_loader/: main.py
BackTestingFrameWork/python/load_data/mongo_db_loader/: main.py
BackTestingFrameWork/python/load_data/mongo_pipeline/: main.py
BackTestingFrameWork/python/options/test/: main.py
Test/simulator/: main.ipynb  nse_holidays_2024.csv
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/C++/Instruments/: main.cpp
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/C++/web_soc/: main.cpp  main.h
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/C++/web_soc/WebSocket/: Cargo.toml
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/C++/web_soc/WebSocket/src/: main.rs
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/Python/auth/: main.py
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/Python/dbProcess/: main.py
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/Python/logger/: main.py
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/Python/market_data_api/: main.py
TradingInfrastructure/India/MarketData/XTS_TT_BLAZE/Python/web_socket/: main.py
components/rust/write_csv_to_db/: Cargo.toml
components/rust/write_csv_to_db/src/: main.rs
research/Options/: main.ipynb
